--- a/src/Pages/Login/Login/Login.css
+++ b/src/Pages/Login/Login/Login.css
@@ -1,8 +1,8 @@
 .login-container {
     position: relative;
-    max-width: 350px;
+    max-width: 600px;
     margin: 4rem auto;
-    height: 600px;
+    height: 610px;
     border-radius: 20px;
     padding: 20px;
     box-sizing: border-box;
@@ -26,11 +26,21 @@
 }
 
 .login-container label,
-.login-container input,
-.login-container button {
+.login-container input {
     display: block;
     width: 100%;
     padding: 0;
+    border: none;
+    outline: none;
+    box-sizing: border-box;
+}
+
+.login-container button
+ {
+    display: block;
+    width: 60%;
+    padding: 7px 0;
+    margin: auto;
     border: none;
     outline: none;
     box-sizing: border-box;
