--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -1,17 +1,31 @@
-.nav {
-    box-shadow: 0px 7px 60px rgba(0, 0, 0, 0.37);
-    background-color: rgba(205, 140, 151, 0.42);
+
+.fit-to-fly-nav{
+    box-shadow: 0px 7px 60px rgba(195, 133, 133, 0.37);
+    background-color: rgba(0, 0, 0, 0.888);
+    padding: 18px 0;
+}
+.logo-name{
+    font-size: 28px;
+    font-weight: 700;
+    color: darkred;
 }
 
 .link {
     text-decoration: none;
     display: inline-block;
-    border-bottom: 4px solid rgb(207, 166, 166);
-    margin-left: 18px;
+    border-bottom: 4px solid whitesmoke;
+    margin-left: 26px;
     font-size: 20px;
     font-weight: 700;
-    color: rgba(219, 133, 148, 0.985);
+    color: whitesmoke;
     transition: color ease-in-out 300ms;
+    
+}
+.link:hover,
+.active-link:hover {
+    color: rgb(112, 43, 43);
+    border-bottom: 4px solid rgba(135, 71, 82, 0.863);
+
     
 }
 
@@ -19,12 +33,12 @@
 .active-link {
     text-decoration: none;
     display: inline-block;
-    border-bottom: 4px solid rgba(135, 71, 82, 0.863);
+    border-bottom: 4px solid rgba(201, 92, 110, 0.863);
     margin-left: 15px;
     font-size: 20px;
     font-weight: 700;
     transition: color ease-in-out 300ms;
-    color: rgba(135, 71, 82, 0.863);
+    color: rgba(201, 92, 110, 0.863);
     transition: border-bottom 1s ease-in-out;
 
 
