--- a/src/Pages/Home/Service/Service.css
+++ b/src/Pages/Home/Service/Service.css
@@ -1,30 +1,3 @@
-/* .bottom-border{
-    border-bottom: 4px solid #F74B54;
-    box-shadow: 0 3px 20px 0px rgb(0 0 0 / 12%);
-    border-radius: 1.5rem;
- 
-    
-    
-}
-.service-box{
-    padding: 20px;
-    background-color: #fff;
-    transition: .4s;
-    transform: translateY(0);
-    cursor: pointer;
-}
-.service-content h3{
-    font-size: 24px;
-    font-weight: 700;
-    color: rgb(58, 58, 58);
-}
-.service-box:hover{
-    box-shadow: 0 0 30px #eee;
-    transform: translateY(-.5rem);
-}
-.service-content h3:hover{
-    color: #106eea;
-} */
 
 .box{
     width: 31rem;
@@ -43,7 +16,7 @@
    position: absolute;
    top: 50%;
    left: 50%;
-   transform: translate(-50%,-50%) scale(1);
+   transform: translate(-50%,-50%) scale(0);
    transform-origin: bottom;
    width: 80%;
    height: 100%;
@@ -57,7 +30,7 @@
 }
 .box .info h3{
    font-size: 2rem;
-   color: brown;
+   color: rgb(141, 6, 6);
    margin-bottom: 1.2rem;
 }
 .box .info p{
@@ -70,8 +43,8 @@
 .box .info .purchase-btn{
    outline: none;
    background-color: transparent;
-   color: brown;
-   border: 5px solid brown;
+   color: rgb(141, 6, 6);
+   border: 5px solid rgb(133, 66, 66);
    border-radius: 10px;
    font-size: 20px;
 } 
