--- a/src/Pages/Home/CustomSection/CustomSection.css
+++ b/src/Pages/Home/CustomSection/CustomSection.css
@@ -1,9 +1,9 @@
 .custom-header{
         font-size: 2.2rem;
-        display: inline-block;
+        display:block;
         color: brown;
         margin: 25px 0;
-        border-bottom: .3rem solid brown;
+        border-bottom: .2rem solid brown;
 }
 .backgroud{
     width: 100%;
