--- a/src/Pages/Home/Services/Services.css
+++ b/src/Pages/Home/Services/Services.css
@@ -1,14 +1,13 @@
 .services{
     min-height: 100vh;
-    text-align: center;
 }
 
 .services h1{
     font-size: 2.2rem;
-    display: inline-block;
+    display: block;
     color: brown;
     margin: 25px 0;
-    border-bottom: .3rem solid brown;
+    border-bottom: .2rem solid brown;
 }
 .service-container{
     display: flex;
