--- a/src/Pages/Login/Login/Login.css
+++ b/src/Pages/Login/Login/Login.css
@@ -1,3 +1,10 @@
+
+.bg-color{
+    background: rgba(116, 2, 2, 0.689) !important;
+}
+.bg-color:hover{
+    background: rgb(124, 32, 32) !important;
+}
 .login-container {
     position: relative;
     max-width: 600px;
@@ -6,7 +13,7 @@
     border-radius: 20px;
     padding: 20px;
     box-sizing: border-box;
-    background: #ecf0f3;
+    background: rgba(122, 18, 18, 0.133);
     box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
 }
 
@@ -16,8 +23,8 @@
     margin-top: 10px;
     font-weight: 900;
     font-size: 1.8rem;
-    color: #1da1f2;
     letter-spacing: 1px;
+    color: brown
 }
 
 .login-form {
