--- a/src/Pages/Home/Service/Service.css
+++ b/src/Pages/Home/Service/Service.css
@@ -27,6 +27,7 @@
    display: flex;
    justify-content: center;
    flex-direction: column;
+   align-items: center;
 }
 .box:hover .info{
     transform: translate(-50%,-50%) scale(1);
@@ -50,4 +51,6 @@
    border: 5px solid brown;
    border-radius: 10px;
    font-size: 20px;
+   width: 70%;
+   align-items: center;
 } 
